<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


<TextView
    android:id="@+id/tvInput"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="#202020"
    android:padding="10dp"
    android:text=""
    android:textSize="40sp"
    android:textColor="#989898"
    android:gravity="end|bottom"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"

        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"

            />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_Divide"
            android:layout_margin="2dp"

            />






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"

        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnFive"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"

            />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnMul"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/x"
            android:layout_margin="2dp"

            />






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:text="@string/_1"
            android:onClick="onDigit"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_margin="2dp"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"

            />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:onClick="onOperator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-"
            android:layout_margin="2dp"

            />






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:text="@string/Dot"
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"

            />
        <Button
            android:id="@+id/btnCLR"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:onClick="onClear"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"

            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:onClick="onOperator"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:layout_margin="2dp"

            />







    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/black"
        >

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="30sp"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:text="="
            android:onClick="onEqual"
            android:layout_margin="2dp"
            />




    </LinearLayout>

</LinearLayout>